[gd_scene load_steps=6 format=3 uid="uid://cojflt1iyajkp"]

[ext_resource type="Script" uid="uid://dp1n7nkskx4g2" path="res://scripts/scene_scripts/scene4.gd" id="1_nfw4y"]
[ext_resource type="FontFile" uid="uid://cl8ntpdrpicmf" path="res://assets/Born2bSportyV2.ttf" id="2_j6vxe"]
[ext_resource type="Texture2D" uid="uid://dynidctfqr415" path="res://assets/exitBut.png" id="5_8moi8"]
[ext_resource type="Texture2D" uid="uid://okmfy0uyd3bg" path="res://assets/exitButClicked.png" id="6_uc18a"]
[ext_resource type="Texture2D" uid="uid://c880o7vl0446e" path="res://assets/sky.png" id="7_14lli"]

[node name="Scene4" type="Node2D"]
script = ExtResource("1_nfw4y")

[node name="Label" type="Label" parent="."]
offset_left = 260.0
offset_top = 100.0
offset_right = 820.0
offset_bottom = 380.0
pivot_offset = Vector2(280, 140)
theme_override_fonts/font = ExtResource("2_j6vxe")
theme_override_font_sizes/font_size = 280
text = "END"
horizontal_alignment = 1

[node name="QuitBut" type="TextureButton" parent="."]
offset_left = 444.0
offset_top = 822.0
offset_right = 636.0
offset_bottom = 910.0
texture_normal = ExtResource("5_8moi8")
texture_pressed = ExtResource("6_uc18a")
stretch_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(540, 540)
texture = ExtResource("7_14lli")

[node name="Label2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 254.0
offset_top = 418.0
offset_right = 373.0
offset_bottom = 441.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_j6vxe")
text = "your moral status:"
horizontal_alignment = 1

[node name="MoralLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 375.0
offset_top = 533.0
offset_right = 494.0
offset_bottom = 556.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_j6vxe")
text = "MORAL_SCORE"
horizontal_alignment = 1

[connection signal="pressed" from="QuitBut" to="." method="_on_quit_but_pressed"]
